# NewTube

./: CMakeLists.txt  README.md  install.sh  main.cpp
core/: MainWindow.cpp  MainWindow.h
